# ragms02

./: .buildinfo  .gitignore  .ragignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  api.html  architecture.dsl  genindex.html  index.html  objects.inv  openapi.yaml  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
.doctrees/adr/: 0003-ingestion-method.doctree  0004-api-design.doctree  0005-authentication.doctree  0007-error-handling.doctree  (+10 more)
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt
adr/: 0003-ingestion-method.html  0004-api-design.html  0005-authentication.html  0006-file-change-detection.html  0007-error-handling.html  0008-deployment.html  0009-observability.html  0010-vector-db.html  0011-llm-routing.html  0012-security.html  0013-project-tagging.html  0014-initial-load.html  9999-decision-backlog.html  index.html
design/: file-watcher-sdd.html
docs/: architecture.dsl  conf.py  index.rst  usage.rst
examples/: bulk_ingest.py  ignore_utils.py  ingest_and_query_cloud.py  ingest_and_query_local.py  sample_code.py  watch_directory.py  watch_exclude_examples_dir.py  watch_with_ragignore.py
scripts/: publish_docs.sh
tests/: test_admin.py  test_admin_status.py  test_api.py  test_embedding.py  test_ignore_utils_minimal.py  test_llm_ollama.py  test_query.py  test_vectorstore.py  test_vectorstore_sqlite.py  test_watcher.py  test_watcher_ragignore.py
(+62 files in other folders)
